// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FieldGroup /> > should render a select field prefix 1`] = `
<div>
  <div
    class="junipero field-group"
  >
    <div
      class="junipero field-addon"
    >
      €
    </div>
    <div
      class="junipero dropdown select-field pristine valid searchable empty"
      id="junipero-select-field-«r0»"
    >
      <div
        class="field dropdown-toggle"
        id="junipero-select-field-«r0»-toggle"
      >
        <input
          aria-autocomplete="list"
          aria-controls="junipero-select-field-«r0»-items"
          aria-expanded="false"
          aria-haspopup="listbox"
          dir="ltr"
          id="junipero-select-field-«r0»-field"
          role="combobox"
          size="10"
          type="text"
          value=""
        />
        <div
          class="icons"
        >
          <svg
            class="junipero icon arrows"
            height="13"
            viewBox="0 0 8 13"
            width="8"
          >
            <path
              d="M1 4.5L4 1.5L7 4.5"
            />
            <path
              d="M1 8.5L4 11.5L7 8.5"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FieldGroup /> > should render a select field suffix 1`] = `
<div>
  <div
    class="junipero field-group"
  >
    <div
      class="junipero dropdown select-field pristine valid searchable empty"
      id="junipero-select-field-«r5»"
    >
      <div
        class="field dropdown-toggle"
        id="junipero-select-field-«r5»-toggle"
      >
        <input
          aria-autocomplete="list"
          aria-controls="junipero-select-field-«r5»-items"
          aria-expanded="false"
          aria-haspopup="listbox"
          dir="ltr"
          id="junipero-select-field-«r5»-field"
          role="combobox"
          size="10"
          type="text"
          value=""
        />
        <div
          class="icons"
        >
          <svg
            class="junipero icon arrows"
            height="13"
            viewBox="0 0 8 13"
            width="8"
          >
            <path
              d="M1 4.5L4 1.5L7 4.5"
            />
            <path
              d="M1 8.5L4 11.5L7 8.5"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="junipero field-addon"
    >
      €
    </div>
  </div>
</div>
`;

exports[`<FieldGroup /> > should render a textfield prefix 1`] = `
<div>
  <div
    class="junipero field-group"
  >
    <div
      class="junipero field-addon"
    >
      €
    </div>
    <div
      class="junipero text-field pristine valid empty"
    >
      <input
        class="field"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<FieldGroup /> > should render a textfield suffix 1`] = `
<div>
  <div
    class="junipero field-group"
  >
    <div
      class="junipero text-field pristine valid empty"
    >
      <input
        class="field"
        type="text"
        value=""
      />
    </div>
    <div
      class="junipero field-addon"
    >
      €
    </div>
  </div>
</div>
`;

exports[`<FieldGroup /> > should render a textfield with a prefix & a button suffix 1`] = `
<div>
  <div
    class="junipero field-group"
  >
    <div
      class="junipero field-addon"
    >
      €
    </div>
    <div
      class="junipero text-field pristine valid empty"
    >
      <input
        class="field"
        type="text"
        value=""
      />
    </div>
    <button
      class="junipero button"
      role="button"
    >
      Update
    </button>
  </div>
</div>
`;

exports[`<FieldGroup /> > should render textfields with a center addon 1`] = `
<div>
  <div
    class="junipero field-group"
  >
    <div
      class="junipero text-field pristine valid empty"
    >
      <input
        class="field"
        type="text"
        value=""
      />
    </div>
    <div
      class="junipero field-addon"
    >
      @
    </div>
    <div
      class="junipero text-field pristine valid empty"
    >
      <input
        class="field"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
